--- a/a.html
+++ b/a.html
@@ -4,6 +4,6 @@
 	<title>Produk Brief Singkat - FFFest</title>
 </head>
 <body>
-<img src="img/a.jpg" width="100%" height="100%">
+<img src="https://i.ibb.co/c2kd4mN/a.jpg" width="100%" height="100%">
 </body>
 </html>
