--- a/b.html
+++ b/b.html
@@ -4,6 +4,6 @@
 	<title>Produk Brief Singkat - FFFest</title>
 </head>
 <body>
-<img src="img/b.jpg" width="100%" height="100%">
+<img src="https://i.ibb.co/6B6T0w3/b.jpg" width="100%" height="100%">
 </body>
 </html>
