--- a/c.html
+++ b/c.html
@@ -4,6 +4,6 @@
 	<title>Produk Brief Singkat - FFFest</title>
 </head>
 <body>
-<img src="img/c.jpg" width="100%" height="100%">
+<img src="https://i.ibb.co/61VsdyC/c.jpg" width="100%" height="100%">
 </body>
 </html>
